Fixed content vs header div width discrepency on narrow browser windows. Set a comfortable min-width for the #globalWrapper so the header background doesn't get clipped.

--- a/www/wp-content/themes/cc5/style.css
+++ b/www/wp-content/themes/cc5/style.css
@@ -11,6 +11,7 @@ Version: 5.0
 
 #globalWrapper {
 	background: #fff url('images/header-bar-thin.png') repeat-x top left;
+	min-width: 980px;
 }
 
 #headerNav {
